<resources>
    <string name="app_name">C&amp;F</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="desarrollador"> By:  Diego Aragón</string>

    <!-- Menu admin -->
    <string name="Inicioadmin">Inicio</string>
    <string name="PerfilAdmin">Perfil</string>
    <string name="RegistrarAdmin">Registrar</string>
    <string name="ListarAdmin">Lista de administradores</string>
    <string name="Salir">Cerrar sesión</string>


    <!-- Menu cliente -->

    <string name="Opcionestxt">Opciones</string>
    <string name="InicioCliente">Inicio</string>

    <string name="MasOpcionestxt">Más opciones</string>
    <string name="AcercaDe">Acceder</string>
    <string name="Compartir">Compartir</string>


    <string name="Acceder">Acceder</string>

    <!-- Registro de administradores-->

    <string name="RegistroTXT">Registro de administradores</string>
    <string name="Correo">Correo electronico</string>
    <string name="Password">Contraseña</string>
    <string name="Nombres">Nombre completos</string>
    <string name="Apellidos">Apellidos completos</string>
    <string name="Edad">Edad</string>
    <string name="FechaRegistro">Fecha de Registro</string>
    <string name="Registrar">Registrar</string>


    <!--LOGIN DE ADMINISTRADORES -->
    <string name="LoginTXT">Login de administradores</string>
    <string name="Ingrear">Ingresar</string>

    <!--Categorias-->
    <string name="Eligeunacategoriatxt">Elige Categoria</string>
    <string name="CevichesTostadas">Ceviche | Tostadas </string>
    <string name="CocinaCombieKids"> Cocina | Combie </string>
    <string name="QuesadillasTacos">Quesadillas|Tacos</string>

    <string name="KidsExtra">      Kids | Extra    </string>
    <string name="ConAlcohol">Alcohol</string>
    <string name="SinAlcohol">Sin Alcohol</string>

    <!--MENU PARTE SUPERIOR DERECHA-->
    <string name="Agregar">Agregar</string>
    <string name="Vista">Vista</string>


    <!-- Agregar PLATILLOS Ceviches-->
    <string name="NombreTXTPlatillosCeviches">Nombre de imagenes</string>
    <string name="NombrePlatillosCeviche">Escriba el nombre aquí</string>
    <string name="PrecioPlatillosCeviches">0</string>
    <string name="PublicarPlatilloCeviche">Publicar</string>


    <!--AGREGAR  PLATILLOS COCINA-->
    <string name="NombreTXTPlatillosCocina">Nombre de imagenes</string>
    <string name="NombrePlatillosCocina">Escriba el nombre aquí</string>
    <string name="PrecioPlatillosCocina">0</string>
    <string name="PublicarPlatilloCocina">Publicar</string>


    <!---->

    <!--ITEM CEVICHE-->
    <string name="NombreImagenCeciche"> -- </string>
    <string name="PrecioPelicula"> -- </string>

    <!--ITEM COCINA-->
    <string name="NombreImagenCocina"> -- </string>
    <string name="PrecioCocina"> -- </string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>