<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".CategoriasAdmin.CocinaA.AgregaraCocina">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!--TXT-->
            <TextView
                android:text="@string/NombreTXTPlatillosCocina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <!--NOMBRE DE LA IMAGEN-->
            <EditText
                android:id="@+id/NombrePlatillosCocina"
                android:hint="@string/NombrePlatillosCocina"
                android:inputType="textCapWords|textAutoCorrect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>

            <!--VISTA-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">


                <!--ICONO-->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:src="@drawable/precio_ico"/>

                <!--PRECIO QUE SE DEJA INICIALIZADO EN 0-->
                <TextView
                    android:id="@+id/PrecioPlatillosCocina"
                    android:text="@string/PrecioPlatillosCocina"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ImagenPlatillo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/imagen_ico"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/PublicarPlatilloCocina"
            android:text="@string/PublicarPlatilloCocina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:background="@drawable/btn_personalizado"
            android:layout_marginTop="10dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>